Fixes issue with code block scrolling
* Scrollbar doesn't get stuck on when you hover it
* Scrollbar only active when element is hovered

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -44,7 +44,10 @@ pre code {
 
   pre {
     margin-bottom: 0;
-    overflow-x: auto;
+    overflow-x: hidden;
+    &:hover {
+        overflow-x: auto;
+    }
   }
 
   .lineno {
